--- a/lab3/content.tex
+++ b/lab3/content.tex
@@ -103,31 +103,33 @@
 \section*{Задание рабочей точки усилительного каскада с общим
 истоком}
 
-На выходной ВАХ построим линию максимальной мощности (см. Рис. \ref{fig:рабочая_точка}),
-выберем значение напряжения источника питания $E_\text{К}=15\ B$.
-Величина сопротивления $R_C$ оказывает влияние на частотные
-свойства каскада. С точки зрения расширения частотного
-диапазона рекомендуется значение $R_C$ уменьшить. Нам известно 
-внутреннее сопротивление транзистора, тогда значение сопротивления можно выбрать в
-соответствии с соотношением $R_C=(0.05\dots 0.15)R_i$, пусть $R_C=0.1\cdot R_i=0.05\ \text{Ом}$. 
-
-На выходной ВАХ построим нагрузочную линию. Для построения
-линии рассматриваются два режима --- режим холостого
-хода и короткого замыкания, соответственно находятся две
-точки, через которые проходит нагрузочная линия. Обычно
-выбирают величину падения напряжения на $R_\text{И}$ порядка $(0.1\dots 0.3)E_K$,
-тогда пусть $R_\text{И}=0.16\cdot E_K=2.5\ \text{Ом}$. Итоговую нагрузочную линию
-можно увидеть на рисунке \ref{fig:рабочая_точка} ввиде красной линии. 
-Получаем точку (см. Рис. \ref{fig:рабочая_точка}):
+На выходной ВАХ построим линию максимальной мощности (см. Рис. \ref{fig:рабочая_точка}).
+На ВАХ в рабочем диапазоне нанесем нагрузочную линию (см. Рис. \ref{fig:рабочая_точка}),
+выбрав значение напряжения источника питания $E_\text{К}=12\ B$ и $I_\text{КЗ}=9\ A$:
 \begin{equation*}
-    U_{\text{СИ}_0}=7.3\ \text{В},\quad I_{\text{С}_0}=3.2\ A,\quad U_{\text{ЗИ}_0}=2.2\ B.
+    U_{\text{СИ}_0}=6.10\ \text{В},\quad I_{\text{С}_0}=4.44\ A,\quad U_{\text{ЗИ}_0}=2.25\ B.
 \end{equation*}
-
-Расчет значений сопротивлений резисторов делителя. Можно задать значение
-сопротивления $R_1=1\dots 2\ \text{МОм}$, пусть $R_1=1\ \text{МОм}$. 
+Тогда $R_C=1.33\ \text{Ом}$, $R_1=43\ \text{МОм}$, $R_2=10\ \text{МОм}$. Собрем
+схему как на рисунке \ref{fig:общий_исток} только без источника напряжения V1 и
+конденсатора С1, чтобы проверить рабочую точку. После симуляции получим значения
 \begin{equation*}
-    R_2=\frac{E_KR_2}{U_{\text{И}_0}+U_{\text{ЗИ}_0}}-R_1=\frac{15\cdot 1e6}{8+2.2}-1e6\approx0.46\ \text{МОм}.
+    U_{\text{СИ}}=6.12\ \text{В},\quad I_{\text{С}}=4.90\ A,\quad U_{\text{ЗИ}}=2.26\ B,
 \end{equation*}
+как видно значения похожи на рабочую точку, отличается сильнее всего сила тока
+стока.
+
+Проведем моделирование схемы \ref{fig:общий_исток} при гармоническом
+входном сигнале с амплитудой 0.1 В и частотой 1 кГц. Осциллограммы входных и выходных токов и
+напряжений на рисунках \ref{fig:гарм_ток} и \ref{fig:гарм} соответственно.
+
+Рассчитаем коэффициент усиления по напряжению:
+\begin{equation*}
+    K_U=\frac{U_{\text{ВЫХ}_{max}}}{U_{\text{ВХ}_{max}}}=\frac{2.85\ V}{99.89\ mV}
+    \approx 2.85\ .
+\end{equation*}
+Проведем его частотный анализ (см. Рис. \ref{fig:ачх}). Амплитуда схему не
+изменяется до 10 МГц, после чего уже на 100 МГц начинает сильно падать, фаза
+смещается постоянно, и чем больше частота тем меньше фаза.
 
 \begin{figure}[H]
     \centering
@@ -136,9 +138,39 @@
     \label{fig:рабочая_точка}
 \end{figure}
 
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=\linewidth]{figs/схема_общий_исток.png}
+    \caption{Схема усилительного каскада с общим истоком}
+    \label{fig:общий_исток}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\linewidth]{figs/гарм.png}
+    \caption{Осциллограммы входных и выходных напряжений}
+    \label{fig:гарм}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\linewidth]{figs/гарм_ток.png}
+    \caption{Осциллограммы входных и выходных токов}
+    \label{fig:гарм_ток}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\linewidth]{figs/ачх.png}
+    \caption{АЧХ коэффициента усиления по напряжению схемы с общим истоком}
+    \label{fig:ачх}
+\end{figure}
 
 
 \section*{Заключение}
 
-
-
+В ходе лабораторной исследовали передаточную и выходную ВАХ МОП-транзистора с 
+индуцированным каналом: HAT2164H, 
+также рассмотрели одно из его применений, а именно транзистор как
+усилитель в схеме с общим истоком. Для оценки усиления использовался коэффициент 
+усиления напряжения, который составил $2.85$.
