--- a/lab3/content.tex
+++ b/lab3/content.tex
@@ -127,9 +127,13 @@
     K_U=\frac{U_{\text{ВЫХ}_{max}}}{U_{\text{ВХ}_{max}}}=\frac{2.85\ V}{99.89\ mV}
     \approx 2.85\ .
 \end{equation*}
-Проведем его частотный анализ (см. Рис. \ref{fig:ачх}). Амплитуда схему не
+Проведем его частотный анализ (см. Рис. \ref{fig:ачх1} и \ref{fig:ачх2}). 
+При С1 от 1 мкФ до 1 мФр и С2 от 1 нФ до 1 мФ (Рис. \ref{fig:ачх1}) амплитуда схемы не
 изменяется до 10 МГц, после чего уже на 100 МГц начинает сильно падать, фаза
-смещается постоянно, и чем больше частота тем меньше фаза.
+смещается постоянно, и чем больше частота тем меньше фаза, если же изменить 
+С1 на 1 нФр (Рис. \ref{fig:ачх2}), то АЧХ изменяется, особенно амплитуда, которая
+в децибелах становится отрицательной, что говорит от том, что коэффициент усиления
+по напряжению упал ниже единицы.
 
 \begin{figure}[H]
     \centering
@@ -161,11 +165,17 @@
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.8\linewidth]{figs/ачх.png}
-    \caption{АЧХ коэффициента усиления по напряжению схемы с общим истоком}
-    \label{fig:ачх}
+    \includegraphics[width=0.8\linewidth]{figs/ачх_c1_1m_c2_1u.png}
+    \caption{АЧХ коэффициента усиления по напряжению схемы с общим истоком C1=1мкФ C2=1мкФ}
+    \label{fig:ачх1}
 \end{figure}
 
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\linewidth]{figs/ачх_c1_1n_c2_1u.png}
+    \caption{АЧХ коэффициента усиления по напряжению схемы с общим истоком C1=1нФ C2=1мкФ}
+    \label{fig:ачх2}
+\end{figure}
 
 \section*{Заключение}
 
